# jsonrpc

./: pyproject.toml
requirements/: run-3rd-party.in
src/resultes_jsonrpc/jsonrpc/: base.py  client.py  connection.py  jsonrpc_logging.py  server.py  types.py
src/resultes_jsonrpc/websockets/: client.py  common.py  server.py  types.py
src/websockets/: server.py
