[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "resultes_jsonrpc"
authors = [
    { name = "Institute for Solar Technology (SPF), OST Rapperswil", email = "damian.birchler@ost.ch" },
]
description = "Utilities for JSON-RPC"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.package-data]
resultes_server = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/run-3rd-party.in"]}

[tool.uv]
config-settings = { editable_mode = "strict" }


